--- a/style.css
+++ b/style.css
@@ -1070,3 +1070,38 @@ nav ul li a.active::after {
     transform: rotate(-45deg) translateY(-8px);
   }
 }
+
+
+
+/* HAMBURGER OUTSIDE NAVBAR */
+.hamburger-container {
+  position: fixed;
+  top: 15px;          /* adjust if needed */
+  right: 15px;        /* moves it to the right */
+  z-index: 9999;
+  display: none;      /* hide on large screens */
+}
+
+.hamburger {
+  width: 30px;
+  height: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.hamburger span {
+  width: 100%;
+  height: 4px;
+  background: white;
+  border-radius: 5px;
+}
+
+/* SHOW HAMBURGER ONLY ON PHONE */
+@media (max-width: 768px) {
+  .hamburger-container {
+    display: block;
+  }
+}
+
